@@ -9,12 +9,12 @@ import ar.com.aeb.alquileres.model.PropertyExpense;
 import ar.com.aeb.alquileres.model.RentalContract;
 import ar.com.aeb.alquileres.repository.PropertyRepository;
 import ar.com.aeb.alquileres.repository.RentalContractRepository;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -33,19 +33,54 @@ public class PaymentDetailsService {
     }
 
     private PaymentDetailsResponse buildPaymentDetails(Property property) {
-        List<PropertyExpense> pendingExpenses = property.getPropertyExpenses().stream().filter(pe -> pe.getStatus() == PropertyExpense.PropertyExpenseStatus.PENDING).toList();
+        // Get all non-paid expenses
+        List<PropertyExpense> pendingExpenses = property.getPropertyExpenses().stream().filter(pe -> pe.getStatus() != PropertyExpense.PropertyExpenseStatus.PAID).collect(Collectors.toList());
 
-        List<ExpenseResponse> expenseDetails = property.getPropertyExpenses().stream().map(ExpenseResponse::new).collect(Collectors.toList());
+        List<ExpenseResponse> expenseDetails = pendingExpenses.stream().map(ExpenseResponse::new).collect(Collectors.toList());
 
-        // Get rental contract for this property
-        RentalContractResponse rentalContractResponse = null;
-        List<RentalContract> contracts = rentalContractRepository.findByPropertyId(property.getId());
+        // Get non-paid rental contracts
+        List<RentalContract> contracts = rentalContractRepository.findByPropertyId(property.getId()).stream().filter(c -> c.getStatus() != RentalContract.RentalContractStatus.PAID).collect(Collectors.toList());
+
+        RentalContractResponse activeContractResponse = null;
         if (!contracts.isEmpty()) {
-            RentalContract contract = contracts.get(0);
-            rentalContractResponse = new RentalContractResponse(contract);
+            activeContractResponse = new RentalContractResponse(contracts.get(0));
         }
 
-        PaymentDetailsResponse response = new PaymentDetailsResponse(rentalContractResponse, expenseDetails);
+        PaymentDetailsResponse response = new PaymentDetailsResponse(activeContractResponse, expenseDetails);
+
+        // Calculate Status and Earliest Due Date (Standardizing with Summary)
+        boolean hasOverdue = false;
+        boolean hasPending = false;
+        LocalDate earliestDate = null;
+
+        for (RentalContract contract : contracts) {
+            hasPending = true;
+            if (contract.getStatus() == RentalContract.RentalContractStatus.OVERDUE) {
+                hasOverdue = true;
+            }
+            if (earliestDate == null || contract.getDueDate().isBefore(earliestDate)) {
+                earliestDate = contract.getDueDate();
+            }
+        }
+
+        for (PropertyExpense pe : pendingExpenses) {
+            hasPending = true;
+            if (pe.getStatus() == PropertyExpense.PropertyExpenseStatus.OVERDUE) {
+                hasOverdue = true;
+            }
+            // If expenses had a due date, we would check it here
+        }
+
+        if (hasOverdue) {
+            response.setPaymentStatus("OVERDUE");
+        } else if (hasPending) {
+            response.setPaymentStatus("PENDING");
+        } else {
+            response.setPaymentStatus("PAID");
+        }
+
+        response.setEarliestDueDate(earliestDate);
+
         return response;
     }
 }
